--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,8 @@ a img {
   border: none; }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
-  display: block; }
+  display: block;
+}
 
 * {
   -webkit-box-sizing: border-box;
@@ -72,11 +73,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 html {
-  background-color: #023E54;
+  background-color: #604735;
   background-image: url(images/fallback-gradient.png);
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#023E54), to(#10AAC0));
   background-image: -webkit-linear-gradient(top, #023E54, #10AAC0);
-  background-image: -moz-linear-gradient(top, #023E54, #10AAC0);
+  /*background-image: -moz-linear-gradient(top, #023E54, #10AAC0);*/
+  background-image: -moz-linear-gradient(top, #008000, #001a00);
   background-image: -o-linear-gradient(top, #023E54, #10AAC0);
   min-height: 100%;
   height: auto;
@@ -137,6 +139,11 @@ a.small {
 
 /* Search Styles */
 
+.newlist{
+  position: relative;
+
+}
+
 .search {
   background: #063642;
   color: #EEE8D5;
@@ -148,6 +155,7 @@ a.small {
   border-radius: 20px;
   padding: 20px 30px;
   z-index: 20;
+
 }
 
 .search h1 {
@@ -167,7 +175,8 @@ a.small {
     cursor: pointer;
     border: 1px solid transparent;
     border-radius: 4px;
-    background: #C61C6F;
+    /*background: #C61C6F;*/
+    background: #e63900;
     color: #FCF4DC;
     -webkit-user-select: none;
        -moz-user-select: none;
@@ -185,7 +194,7 @@ a.small {
 }
 
 .btn:hover {
-    background: #09576D;
+    background: #aa00ff;
 }
 
 .search label {
@@ -225,19 +234,22 @@ a.small {
   border-radius: 10px;
   outline: 0;
 }
-
+.artistpage{
+   overflow:hidden;
+}
 /* Artist List Styles */
 
 .artistlist {
   background: #EEE8D5;
   width: 50%;
   min-width: 290px;
-  max-width:350px;
+  max-width:400px;
   margin: 0 auto;
   margin-bottom: 30px;
-  border-radius: 0 0 20px 20px;
+  border-radius: 20px;
   opacity: .95;
   z-index: 10;
+  position: static;
 }
 
 .artistlist ul {
@@ -255,6 +267,7 @@ a.small {
   -moz-transition: all 0.3s ease-out;
   -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
+  position :relative;
 }
 
 .artistlist a {
@@ -266,6 +279,7 @@ a.small {
 .artistlist li:hover {
   background: #FDF6E3;
   opacity: 1;
+  border-radius: 20px;
   -webkit-transform: scale(1.2);
   -ms-transform: scale(1.2);
   transform: scale(1.2);
@@ -296,15 +310,15 @@ a.small {
   line-height: 160%;
   background: #EEE8D5;
   color: #0F4150;
-  width: 90%;
+  width: 100%;
   min-width: 320px;
-  max-width: 620px;
+  max-width: 610px;
   margin: 0 auto;
   margin-top: 30px;
   margin-bottom: 30px;
   padding: 20px 30px;
   border-radius: 10px;
-  z-index: 20;
+  /*z-index: 20;*/
 }
 
 .artistinfo h1{
