--- a/partials/details.html
+++ b/partials/details.html
@@ -5,10 +5,13 @@
     <h1>{{artists[whichItem].name}}</h1>
     <div class="info">
       <!-- <h3>{{artists[whichItem].dob}}</h3> -->
-      <img ng-src="images/{{artists[whichItem].shortname}}.jpg" alt="Photo of {{artists[whichItem].name}}">
+      <img ng-src="images/{{artists[whichItem].shortname}}.jpg" alt="Photo of {{artists[whichItem].name}}"><br>
       <h3>{{artists[whichItem].dob}}</h3>
       <div class="bio">{{artists[whichItem].email}}</div>
     </div>
   </div>
   <a href="index.html">&laquo;Back to Search</a>
+  <footer>
+    <p>Contact Us: <a href="https://about.me/rajputankit22">Ankit kumar Rajpoot</a> & <a href="https://about.me/sk_mishra">Saurabh Mishra</a></p>
+  </footer>
 </section>
