--- a/css/style.css
+++ b/css/style.css
@@ -76,10 +76,10 @@ html {
   background-color: #604735;
   background-image: url(images/fallback-gradient.png);
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#023E54), to(#10AAC0));
-  background-image: -webkit-linear-gradient(top, #023E54, #10AAC0);
+  background-image: -webkit-linear-gradient(top, #008000, #001a00);
   /*background-image: -moz-linear-gradient(top, #023E54, #10AAC0);*/
   background-image: -moz-linear-gradient(top, #008000, #001a00);
-  background-image: -o-linear-gradient(top, #023E54, #10AAC0);
+  background-image: -o-linear-gradient(top, #008000, #001a00);
   min-height: 100%;
   height: auto;
 }
