--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 html {
   background-color: #604735;
   background-image: url(images/fallback-gradient.png);
-  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#023E54), to(#10AAC0));
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#008000), to(#001a00));
   background-image: -webkit-linear-gradient(top, #008000, #001a00);
   /*background-image: -moz-linear-gradient(top, #023E54, #10AAC0);*/
   background-image: -moz-linear-gradient(top, #008000, #001a00);
