--- a/partials/list.html
+++ b/partials/list.html
@@ -4,10 +4,10 @@
 
   <div class="search">
     <h1><center>MCA 2014-2017</center></h1>
-    <label>search: </label>
-    <input ng-model="query" placeholder="Search for artists" autofocus>
+    <label>Search: </label>
+    <input ng-model="query" placeholder="Search for your friends" autofocus>
 
-    <label class="formgroup">by:
+    <label class="formgroup">By:
       <select ng-model="artistOrder">
         <option value="name">Name</option>
         <option value="place">Place</option>
